[gd_scene load_steps=6 format=3 uid="uid://yefd3qjhnty5"]

[ext_resource type="Script" path="res://BlackjackRPG/blackjack_rpg.gd" id="1_wsxcj"]
[ext_resource type="Theme" uid="uid://clqaw4338163" path="res://BlackjackRPG/UI_Theme.tres" id="2_8gxnd"]
[ext_resource type="Texture2D" uid="uid://cavvxui281wyx" path="res://BlackjackRPG/Portraits/Guy.png" id="3_gu7dv"]
[ext_resource type="Texture2D" uid="uid://2c6oqm6iwwve" path="res://BlackjackRPG/Portraits/Cool_Bird.png" id="4_ahy4g"]

[sub_resource type="LabelSettings" id="LabelSettings_5hn8b"]
font_size = 80
shadow_size = 8
shadow_color = Color(0, 0, 0, 0.541176)
shadow_offset = Vector2(2, 2)

[node name="BlackjackRpg" type="Node2D"]
script = ExtResource("1_wsxcj")

[node name="Player" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Name" type="Label" parent="Player"]
layout_mode = 0
offset_left = 152.0
offset_top = 509.0
offset_right = 261.0
offset_bottom = 559.0
theme = ExtResource("2_8gxnd")
theme_type_variation = &"HeaderMedium"
text = "Player"

[node name="Cards" type="HBoxContainer" parent="Player"]
custom_minimum_size = Vector2(768, 128)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 177.0
offset_top = 331.0
offset_right = 945.0
offset_bottom = 459.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="HandValue" type="Label" parent="Player"]
layout_mode = 0
offset_left = 529.0
offset_top = 482.0
offset_right = 620.0
offset_bottom = 592.0
text = "21"
label_settings = SubResource("LabelSettings_5hn8b")

[node name="NewHand" type="Button" parent="Player"]
layout_mode = 0
offset_left = 355.0
offset_top = 679.0
offset_right = 444.0
offset_bottom = 710.0
text = "New Hand"

[node name="Hit" type="Button" parent="Player"]
layout_mode = 0
offset_left = 530.0
offset_top = 585.0
offset_right = 619.0
offset_bottom = 616.0
text = "Hit"

[node name="Portrait" type="Sprite2D" parent="Player"]
position = Vector2(75, 578)
texture = ExtResource("3_gu7dv")

[node name="LogLabel" type="Label" parent="."]
offset_left = 466.0
offset_top = 681.0
offset_right = 683.0
offset_bottom = 709.0
theme = ExtResource("2_8gxnd")
text = "You dealt {xx} damage"

[node name="CoolBird" type="Sprite2D" parent="."]
position = Vector2(1063, 220)
texture = ExtResource("4_ahy4g")

[connection signal="pressed" from="Player/NewHand" to="." method="_on_new_hand_pressed"]
[connection signal="pressed" from="Player/Hit" to="." method="_on_hit_pressed"]
